# INT3401E-2-project

./: .gitignore  ITERATIVE_DEEPENING_REPORT.md  README.md  REPORT.md  main.py  pyproject.toml  reports~HEAD  requirements.txt
docs/: GAME_PY_CHANGES_DETAILED.md  GAME_PY_FIXES.md  GAME_PY_USAGE.md  METHODLOGY.md  REPORT.md  index.md  requirements-game-refactor.md
src/: main.py  match_ui.py  quickfix-21
src/arena/: game.py  logger.py
src/benchmark/: __init__.py  cli.py  perft.py  protocol.py  xiangqi_perft_positions.py
src/benchmark/implementations/: __init__.py  xiangqi_board.py
src/benchmark/tests/: test_perft.py
src/bots/: bot.py
src/bots/engine/: algorithm.py  iterative_deepening.py  linear_evaluator.py  move_ordering.py  opening_book.py  quiescence_search.py  quiescene_search.py  quiesence_search.py  transposition_table.py
src/core/: board.py  board_renderer.py  logger.py  move.py  move_generator.py  pieces.py  rules.py  utils.py  zobrist.py
src/engine/: algorithm.py  bot.py  evaluator.py  iterative_deepening.py  linear_evaluator.py  move_ordering.py  transposition_table.py
src/gui/: pygame_viewer.py
src/tests/: test_algorithm.py  test_board.py  test_evaluator.py  test_linear_evaluator.py  test_move_gen.py  test_move_ordering.py  test_move_sorted.py  test_rules.py  test_ucci_perft_bench.py  test_uci.py
src/ucci/: __init__.py  adapter.py  commands.py  engine.py  handler.py  utils.py
src/uci/: __init__.py  commands.py  engine.py  handler.py
